--- a/tmux.conf
+++ b/tmux.conf
@@ -1,8 +1,14 @@
-# address vim mode switching delay (http://superuser.com/a/252717/65504)
+# default shell
+set -g default-command /usr/local/bin/fish
+# address vim mode switching delay (https://superuser.com/a/252717/65504)
 set -s escape-time 0
 
-# force 256 color
-set -g default-terminal "xterm-256color"
+# force 256 color and italics
+set -g default-terminal "tmux-256color"
+# TrueColor
+if-shell '[ "$TERM" = "alacritty" ]' \
+  'set -ga terminal-overrides ",alacritty*:Tc"' \
+  'set -ga terminal-overrides ",xterm-256color*:Tc"'
 # tmux messages are displayed for 4 seconds
 set -g display-time 4000
 
@@ -62,7 +68,7 @@ bind F11 selectw -t:20
 bind F12 selectw -t:21
 
 # Keys to toggle monitoring activity in a window, and synchronize-panes
-setw -g monitor-activity on
+setw -g monitor-activity off
 # set -g visual-activity on
 bind y set synchronize-panes\; display 'synchronize-panes #{?synchronize-panes,on,off}'
 
@@ -73,7 +79,7 @@ bind y set synchronize-panes\; display 'synchronize-panes #{?synchronize-panes,o
 # Smart pane switching with awareness of Vim splits.
 # See: https://github.com/christoomey/vim-tmux-navigator
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
-	| grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+  | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
 bind-key -n C-h if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
 bind-key -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
 bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
