show window title

--- a/tmux.conf
+++ b/tmux.conf
@@ -5,12 +5,17 @@ set -s escape-time 0
 
 # force 256 color and italics
 set -g default-terminal "tmux-256color"
+
 # TrueColor
 if-shell '[ "$TERM" = "alacritty" ]' \
   'set -ga terminal-overrides ",alacritty*:Tc"' \
   'set -ga terminal-overrides ",xterm-256color*:Tc"'
 # tmux messages are displayed for 4 seconds
 set -g display-time 4000
+
+# Windows title
+set-option -g set-titles on
+set-option -g set-titles-string "#S | #W"
 
 # Some tweaks to the status line
 set -g status-bg green
