--- a/tmux.conf
+++ b/tmux.conf
@@ -6,6 +6,9 @@ set -s escape-time 0
 # force 256 color and italics
 set -g default-terminal "tmux-256color"
 
+# enable focus-events
+set -g focus-events on
+
 # TrueColor
 if-shell '[ "$TERM" = "alacritty" ]' \
   'set -ga terminal-overrides ",alacritty*:Tc"' \
@@ -14,14 +17,14 @@ if-shell '[ "$TERM" = "alacritty" ]' \
 set -g display-time 4000
 
 # Windows title
-set-option -g set-titles on
-set-option -g set-titles-string "#S | #W"
+set -g set-titles on
+set -g set-titles-string "#S | #W"
 
 # Some tweaks to the status line
-set -g status-bg green
-set -g status-right "%H:%M"
-set -g window-status-current-style "underscore"
-# set-option -g status-position top
+set -g status-position top
+
+# Update status line frequently
+set -g status-interval 1
 
 # No bells at all
 set -g bell-action none
@@ -45,13 +48,13 @@ bind C-a send-prefix
 
 # Start windows and panes at 1, not 0
 set -g base-index 1
-set-option -g mouse on
+set -g mouse on
 
 # don't rename windows automatically
-set-option -g allow-rename off
+set -g allow-rename off
 
-bind-key - split-window -v
-bind-key '\' split-window -h
+bind-key - split-window -v -c '#{pane_current_path}'
+bind-key '\' split-window -h -c '#{pane_current_path}'
 
 bind-key J resize-pane -D 5
 bind-key K resize-pane -U 5
@@ -98,7 +101,7 @@ bind-key -T copy-mode-vi 'C-l' select-pane -R
 bind-key -T copy-mode-vi 'C-\' select-pane -l
 
 # Reload tmux config
-bind r source-file ~/.tmux.conf
+bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
 # vim
 setw -g mode-keys vi
@@ -110,3 +113,7 @@ bind ] paste-buffer
 
 # buffer
 bind Space choose-buffer
+
+# airline-tmuxline
+if-shell '[ -f ~/.tmux-statusline-colors.conf ]' \
+  'source ~/.tmux-statusline-colors.conf'
