--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,6 @@
 # default shell
 set -g default-command /usr/local/bin/fish
+
 # address vim mode switching delay (https://superuser.com/a/252717/65504)
 set -s escape-time 0
 
@@ -9,59 +10,75 @@ set -g default-terminal "tmux-256color"
 # enable focus-events
 set -g focus-events on
 
+# force resize
+setw -g aggressive-resize on
+
 # TrueColor
 if-shell '[ "$TERM" = "alacritty" ]' \
   'set -ga terminal-overrides ",alacritty*:Tc"' \
   'set -ga terminal-overrides ",xterm-256color*:Tc"'
+
 # tmux messages are displayed for 4 seconds
 set -g display-time 4000
 
-# Windows title
-set -g set-titles on
-set -g set-titles-string "#S | #W"
+# windows title
+# set -g set-titles on
+# set -g set-titles-string "#S"
 
-# Some tweaks to the status line
+# some tweaks to the status line
+set -g status on
 set -g status-position top
+set -g status-justify centre
 
-# Update status line frequently
+# set -g status-style bg=default
+# set -g status-left ''
+# set -g status-right ''
+# set -g window-status-format '#I'
+# set -g window-status-current-format '#I#F'
+
+# update status line frequently
 set -g status-interval 1
 
-# No bells at all
+# no bells at all
 set -g bell-action none
 
-# Lock after 15 minutes
-set -g lock-after-time 1800
+# lock after 15 minutes
+# set -g lock-after-time 1800
 
-# Keep windows around after they exit
+# keep windows around after they exit
 # set -g remain-on-exit on
 
-# Turn on xterm-keys so that additional function keys get escape sequences
+# turn on xterm-keys so that additional function keys get escape sequences
 set -g xterm-keys on
 
-# To limit the scrollback buffer to 10000 lines
-set -g history-limit 10000
+# set the scrollback buffer to 50000 lines
+set -g history-limit 50000
 
-# Change the prefix key to C-a
+# change the prefix key to C-a
 set -g prefix C-a
 unbind C-b
 bind C-a send-prefix
 
-# Start windows and panes at 1, not 0
+# start windows and panes at 1, not 0
 set -g base-index 1
+
+# enable mouse support
 set -g mouse on
 
 # don't rename windows automatically
 set -g allow-rename off
 
+# shortcuts for split windows with the current path
 bind-key - split-window -v -c '#{pane_current_path}'
 bind-key '\' split-window -h -c '#{pane_current_path}'
 
+# resize panes with capital hjkl
+bind-key H resize-pane -L 5
 bind-key J resize-pane -D 5
 bind-key K resize-pane -U 5
-bind-key H resize-pane -L 5
 bind-key L resize-pane -R 5
 
-# Some extra key bindings to select higher numbered windows
+# some extra key bindings to select higher numbered windows
 bind F1 selectw -t:10
 bind F2 selectw -t:11
 bind F3 selectw -t:12
@@ -75,45 +92,39 @@ bind F10 selectw -t:19
 bind F11 selectw -t:20
 bind F12 selectw -t:21
 
-# Keys to toggle monitoring activity in a window, and synchronize-panes
-setw -g monitor-activity off
-# set -g visual-activity on
+# activity monitoring
+setw -g monitor-activity on
+set -g visual-activity off
+
+# synchronize-panes
 bind y set synchronize-panes\; display 'synchronize-panes #{?synchronize-panes,on,off}'
 
-# Keys to hide and show a window name from the status line
-# bind '-' set window-status-format '#I'\; set window-status-current-format '#I'
-# bind '+' set window-status-format '#I:#W#F'\; set window-status-current-format '#I:#W#F'
-
-# Smart pane switching with awareness of Vim splits.
-# See: https://github.com/christoomey/vim-tmux-navigator
-is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
-  | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
-bind-key -n 'C-h' if-shell "$is_vim" 'send-keys C-h'  'select-pane -L'
-bind-key -n 'C-j' if-shell "$is_vim" 'send-keys C-j'  'select-pane -D'
-bind-key -n 'C-k' if-shell "$is_vim" 'send-keys C-k'  'select-pane -U'
-bind-key -n 'C-l' if-shell "$is_vim" 'send-keys C-l'  'select-pane -R'
-bind-key -n 'C-\' if-shell "$is_vim" 'send-keys C-\\' 'select-pane -l'
-
-bind-key -T copy-mode-vi 'C-h' select-pane -L
-bind-key -T copy-mode-vi 'C-j' select-pane -D
-bind-key -T copy-mode-vi 'C-k' select-pane -U
-bind-key -T copy-mode-vi 'C-l' select-pane -R
-bind-key -T copy-mode-vi 'C-\' select-pane -l
-
-# Reload tmux config
-bind r source-file ~/.tmux.conf \; display "Reloaded!"
+# reload tmux config
+bind r source-file ~/.config/tmux/tmux.conf \; display 'Reloaded!'
 
 # vim
 setw -g mode-keys vi
 bind [ copy-mode
 bind-key -T copy-mode-vi v send -X begin-selection
-bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel "pbcopy"
-bind-key -T copy-mode-vi MouseDragEnd1Pane send -X copy-pipe-and-cancel "pbcopy"
+bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel 'pbcopy'
+bind-key -T copy-mode-vi MouseDragEnd1Pane send -X copy-pipe-and-cancel 'pbcopy'
 bind ] paste-buffer
 
 # buffer
 bind Space choose-buffer
 
-# airline-tmuxline
-if-shell '[ -f ~/.tmux-statusline-colors.conf ]' \
-  'source ~/.tmux-statusline-colors.conf'
+# list of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'dracula/tmux'
+
+# dracula settings
+set -g @dracula-show-powerline true
+set -g @dracula-show-fahrenheit false
+set -g @dracula-show-left-icon session
+set -g @dracula-plugins "battery network time"
+set -g @dracula-show-left-sep 
+set -g @dracula-show-right-sep 
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.config/tmux/plugins/tpm/tpm'
